--- a/.drone.yml
+++ b/.drone.yml
@@ -5,4 +5,6 @@ steps:
   - name: test
     image: golang
     commands:
-      - go test ./...
+      - go test -race ./...
+      - make sataas
+      - make satcli
