--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ name: default
 
 steps:
   - name: test
-    image: golang
+    image: golang:alpine
     commands:
       - go test -race ./...
       - make sataas
