--- a/.drone.yml
+++ b/.drone.yml
@@ -4,8 +4,10 @@ name: default
 steps:
   - name: test
     image: golang:alpine
+    environment:
+      CC=musl-gcc
     commands:
       - apk add --no-cache git make build-base
-      - go test -race ./...
+      - go test ./...
       - make sataas
       - make satcli
