--- a/.drone.yml
+++ b/.drone.yml
@@ -9,3 +9,7 @@ steps:
       - go test ./...
       - make sataas
       - make satcli
+  - name: linter
+    image: golangci/golangci-lint
+    commands:
+      - golangci-lint run -v
