--- a/.drone.yml
+++ b/.drone.yml
@@ -1,16 +1,23 @@
+---
 kind: pipeline
 name: default
 
-steps:
-  - name: linter
-    image: golangci/golangci-lint:v1.26.0
-    commands:
-      - golangci-lint run -v
+platform:
+  os: linux
+  arch: amd64
 
-  - name: testbuild
-    image: golang:alpine
-    commands:
-      - apk add --no-cache musl-dev build-base git
-      - go test ./...
-      - make sataas
-      - make satcli
+steps:
+- name: linter
+  image: golangci/golangci-lint:v1.26.0
+  commands:
+  - golangci-lint run -v
+
+- name: testbuild
+  image: golang:alpine
+  commands:
+  - apk add --no-cache musl-dev build-base git
+  - go test ./...
+  - make sataas
+  - make satcli
+
+...
