--- a/.drone.yml
+++ b/.drone.yml
@@ -1,9 +1,10 @@
 kind: pipeline
 name: default
+type: docker
 
 steps:
   - name: linter
-    image: golangci/golangci-lint:v1.26.0
+    image: golangci/golangci-lint:v1.27.0
     commands:
       - golangci-lint run -v
 
@@ -14,3 +15,4 @@ steps:
       - go test ./...
       - make sataas
       - make satcli
+      - make starlink
