--- a/satsvc/js/package.json
+++ b/satsvc/js/package.json
@@ -1,5 +1,6 @@
 {
   "name": "grpc-web-satsvc",
+  "type": "module",
   "dependencies": {
     "google-protobuf": "~3.12.0",
     "grpc-web": "~1.2.0"
