--- a/js/package.json
+++ b/js/package.json
@@ -1,9 +1,12 @@
 {
   "name": "grpc-web-satsvc",
   "type": "module",
+  "main": "index.js",
   "dependencies": {
     "google-protobuf": "~3.12.0",
-    "grpc-web": "~1.2.0"
+    "grpc-web": "~1.2.0",
+    "mapbox-gl": "^1.11.0",
+    "orb.js": "lizard-isana/orb.js"
   },
   "devDependencies": {
     "webpack": "~4.43.0",
