--- a/js/package.json
+++ b/js/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "grpc-web-satsvc",
-  "type": "module",
-  "dependencies": {
-    "google-protobuf": "~3.12.0",
-    "grpc-web": "~1.2.0",
-    "mapbox-gl": "^1.11.0",
-    "orb.js": "github:lizard-isana/orb.js"
+  "name": "sataas-js",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open",
+    "build": "webpack"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "webpack --mode development",
-    "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "description": ""
+  "dependencies": {
+    "bootstrap": "^4.5.0",
+    "google-protobuf": "^3.12.2",
+    "grpc-web": "^1.2.0",
+    "mapbox-gl": "^1.11.0",
+    "orb.js": "github:lizard-isana/orb.js"
+  }
 }
