--- a/.drone.yml
+++ b/.drone.yml
@@ -8,6 +8,18 @@ steps:
       - apk add --no-cache musl-dev build-base git curl npm
       - make cicd-build 
 
+  - name: build_image
+    #image: plugins/docker
+    image: akhenakh/drone-kaniko
+    settings:
+      repo: akhenakh/sataas
+      dry_run: true
+      username:
+        from_secret: docker_username
+      password:
+        from_secret: docker_password
+
+
   - name: deploy
     image: golang:alpine
     commands:
