--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,7 @@ steps:
     settings:
       repo: akhenakh/sataas
       dry_run: true
+      dockerfile: cmd/sataas/Dockerfile
       username:
         from_secret: docker_username
       password:
