--- a/.drone.yml
+++ b/.drone.yml
@@ -1,3 +1,18 @@
+
+kind: pipeline
+type: kubernetes
+name: prtriggered
+
+steps:
+  - name: build
+    image: golang:alpine
+    commands:
+      - echo "from pr2"
+    when:
+      event:
+        include:
+        - pull_request
+---
 kind: pipeline
 type: kubernetes
 name: default
